--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Contact Manager App",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
+        "start": "npm start --prefix client",
 
 
         "server": "nodemon server.js",
