--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Contact Manager App",
     "main": "server.js",
     "scripts": {
-        "start": "set NODE_ENV==production&& concurrently \"npm run server\" \"npm run client \"",
+        "start": "set NODE_ENV=production&& concurrently \"npm run server\" \"npm run client \"",
         "server": "node server.js",
         "client": "npm start --prefix client",
         "clientinstall": "npm install --prefix client",
