--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "server": "set NODE_ENV=production&& concurrently \"npm run server\" \"npm run client \"",
-        "start": "node server.js",
+        "start": "concurrently \"npm run server\" \"npm run client \"",
         "client": "npm start --prefix client",
         "clientinstall": "npm install --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client \""
