--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "main": "server.js",
     "scripts": {
         "server": "node server",
-        "start": "concurrently \"npm run server\" \"npm run client \"",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
         "client": "npm start --prefix client",
         "clientinstall": "npm install --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client \""
 
     },
+    "proxy": "http://localhost:5000",
     "keywords": [],
     "author": "",
     "license": "ISC",
